--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -14,7 +14,7 @@
         app:cardCornerRadius="6dp"
         app:cardUseCompatPadding="true">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -38,13 +38,6 @@
                     android:layout_marginBottom="8dp"
                     android:scaleType="centerCrop" />
 
-                <!--                <com.github.ybq.android.spinkit.SpinKitView-->
-                <!--                    android:id="@+id/spinKit"-->
-                <!--                    style="@style/SpinKitView.Large.Pulse"-->
-                <!--                    android:layout_width="wrap_content"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:layout_centerInParent="true"-->
-                <!--                    app:SpinKit_Color="@color/colorPrimary" />-->
 
             </RelativeLayout>
 
@@ -52,7 +45,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/thumbNail"
                 android:layout_marginTop="5dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/sfprodisplay_medium"
@@ -66,7 +58,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/thumbNail"
                 android:layout_marginTop="5dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/sfprodisplay_light"
@@ -77,7 +68,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="14sp" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
